@@ -1,5 +1,8 @@
 2002-07-25  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/placement.c (PlaceWindow):
+	fixed compilation problem w/ backported fix from 2.5.3
+
 	* fvwm/decorations.c (SelectDecor):
 	removed debug fprintf
 
